attempt to fix ipad display issue overflow hidden

--- a/dist-app/wptheme/siidist/style.css
+++ b/dist-app/wptheme/siidist/style.css
@@ -886,7 +886,6 @@ ul.cpmenu li ul.inks li.i7 {
 	}
 	.site-header {
 		background: none;
-		overflow: hidden;
 		width: 240px;
 		height: 100%;
 	}
